syntax = "proto3";

option go_package = "/protobuf";

message EmptyReply {

}
